--- a/part3/phonebookbackend/package.json
+++ b/part3/phonebookbackend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "proxy": "http://localhost:3001",
   "author": "Guangkai Jiang",
   "license": "MIT",
   "dependencies": {
